public interface Observer {
    void update();
    public void  suscribeChannel (Channel ch);
}
